# OASIS_Local

./: .gitignore  README.md  check_db.py  pyproject.toml  run_gemma_reddit.py  run_llama_reddit.py  run_llama_twitter.py  run_twitter.py  sumika.py
data/reddit/: user_data_mini.json
data/twitter/: user_data_mini.csv
oasis/social_agent/: agent.py  agent_environment.py
oasis/social_platform/: platform.py  recsys.py
oasis/social_platform/config/: user.py
profiles/: chaos.json  test.json
result_data/: 2026-01-19_10-40-36.txt  2026-01-19_10-48-51.txt
